--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "phpflickr"]
 	path = phpflickr
-	url = https://github.com/TimSC/phpflickr.git
+	url = https://github.com/dan-coulter/phpflickr.git
